# scarab-engine

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
scarab-engine/: Cargo.toml
scarab-engine/src/: app.rs  camera.rs  input.rs  lib.rs  scene.rs
scarab-engine/src/effect/: effect_helpers.rs  mod.rs
scarab-engine/src/gameobject/: field.rs  mod.rs
scarab-engine/src/gameobject/entity/: effect_helpers.rs  mod.rs  registry.rs
scarab-engine/src/rendering/: debug.rs  mod.rs  registry.rs
scarab-engine/src/rendering/components/: mod.rs  progress_bar.rs
scarab-engine/src/rendering/sprite/: mod.rs  sprite_serde.rs
scarab-engine/src/types/: mod.rs  physbox.rs
scarab-example/: Cargo.toml  README.md
scarab-example/src/: app.rs  debug.rs  external_serde.rs  inputs.rs  main.rs
scarab-example/src/entities/: enemy.rs  mod.rs  player.rs
scarab-macros/: Cargo.toml
scarab-macros/src/: lib.rs
scarab_example/: Cargo.toml
scarab_example/src/: main.rs
src/: app.rs  camera.rs  control.rs  error.rs  gamestate.rs  input.rs  lib.rs  main.rs  playercontroller.rs  rendering.rs  scene.rs  types.rs  utils.rs
src/app/: mod.rs
src/gameobject/: entity.rs  field.rs  mod.rs
src/gameobject/entity/: entity_controls.rs  mod.rs  registry.rs
src/rendering/: mod.rs  registry.rs
src/rendering/sprite/: mod.rs
src/types/: mod.rs  physbox.rs
