[package]
name = "scarab_engine"
description = "A low-physics 2D game engine for rust"
version = "0.1.0"
edition = "2021"

[dependencies]
derivative = "2.2"
lazy_static = "1.0"
petgraph = { version = "0.6.2", features = ["serde-1"] }
piston = "0.53.0"
piston2d-graphics = "0.42.0"
pistoncore-glutin_window = "0.70.1"
piston2d-opengl_graphics = "0.81.0"
piston2d-shapes = { git = "ssh://git@github.com/rhaaaaawb/shapes.git", branch = "rhawb", features = [
    "serde",
] }
scarab_macros = { path = "../scarab-macros" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
vecmath = "1.0.0"
winit = "0.24.0"

[dev-dependencies]
rand = "0.8.5"

[lib]
crate-type = ["rlib"]
edition = "2021"

[features]
default = []
debug-rendering = []
effect-helpers = []
component-rendering = []
